Renaming skeleton to onetwothree

--- a/OneTwoThree/build.gradle
+++ b/OneTwoThree/build.gradle
@@ -9,8 +9,7 @@ android {
         /*
           REPLACE THIS VALUE WITH YOUR APPLICATION ID
         */
-        //applicationId "com.google.example.games.replace.me"
-        applicationId "com.mymikemiller.skeleton"
+        applicationId "com.mymikemiller.onetwothree"
 
         minSdkVersion android_min_sdk_version
         targetSdkVersion android_compile_version
