--- a/OneTwoThree/src/main/AndroidManifest.xml
+++ b/OneTwoThree/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.mymikemiller.skeleton">
+    package="com.mymikemiller.onetwothree">
 
     <application
         android:allowBackup="true"
@@ -17,7 +17,7 @@
               android:value="@integer/google_play_services_version" />
 
          <activity
-            android:name="com.mymikemiller.skeleton.SkeletonActivity"
+            android:name="com.mymikemiller.onetwothree.OneTwoThreeActivity"
             android:screenOrientation="landscape"
             android:label="@string/app_name" >
             <intent-filter>
