--- a/OneTwoThree/src/main/AndroidManifest.xml
+++ b/OneTwoThree/src/main/AndroidManifest.xml
@@ -7,7 +7,7 @@
         android:fullBackupContent="false"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:screenOrientation="landscape"
+        android:screenOrientation="portrait"
         android:theme="@style/Theme.App" >
          <meta-data
             android:name="com.google.android.gms.games.APP_ID"
@@ -18,7 +18,7 @@
 
          <activity
             android:name="com.mymikemiller.onetwothree.OneTwoThreeActivity"
-            android:screenOrientation="landscape"
+            android:screenOrientation="portrait"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
